[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Sprites/Theme/TempPixel/Button9SlicePressed.png" type="Texture" id=2]
[ext_resource path="res://Scripts/CheatConsole.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/Theme/TempPixel/Panel9Slice.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Theme/TempPixel/Button9Slice.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Theme/TempPixel/Button9SliceHover.png" type="Texture" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 6, 6 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0
modulate_color = Color( 0.392157, 0.392157, 0.392157, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 6, 6 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 6, 6 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 6, 6 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 6, 6 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFontData" id=13]
font_path = "res://Assets/Fonts/Montserrat-Regular.ttf"

[sub_resource type="DynamicFont" id=14]
use_filter = true
extra_spacing_top = -1
font_data = SubResource( 13 )

[sub_resource type="Theme" id=15]
default_font = SubResource( 14 )
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 5 )
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 4 )
Panel/styles/panel = SubResource( 6 )
VScrollBar/styles/grabber = SubResource( 7 )
VScrollBar/styles/grabber_highlight = SubResource( 8 )
VScrollBar/styles/grabber_pressed = SubResource( 9 )
VScrollBar/styles/scroll = SubResource( 10 )
VScrollBar/styles/scroll_focus = SubResource( 11 )

[sub_resource type="DynamicFont" id=16]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 12
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=18]
size = 12
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxLine" id=20]
color = Color( 0, 0.321569, 0.643137, 1 )
vertical = true

[sub_resource type="StyleBoxLine" id=21]
content_margin_left = 5.0
color = Color( 1, 1, 1, 1 )
vertical = true

[node name="CheatConsole" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 15 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.0980392, 0.0980392, 0.980392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Background/Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 170.0
margin_bottom = 310.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Background/Margin/VBox"]
margin_right = 160.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 16 )
text = "Console"

[node name="Output" type="ScrollContainer" parent="Background/Margin/VBox"]
margin_top = 41.0
margin_right = 160.0
margin_bottom = 270.0
grow_vertical = 0
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Background/Margin/VBox/Output"]
margin_right = 160.0
margin_bottom = 229.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Input" type="HBoxContainer" parent="Background/Margin/VBox"]
margin_top = 280.0
margin_right = 160.0
margin_bottom = 300.0
custom_constants/separation = 0

[node name="Carat" type="Label" parent="Background/Margin/VBox/Input"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_fonts/font = SubResource( 17 )
text = ">"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="Background/Margin/VBox/Input"]
margin_left = 20.0
margin_right = 160.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 18 )
custom_styles/read_only = SubResource( 19 )
custom_styles/focus = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
placeholder_text = "Command..."
caret_blink = true

[connection signal="visibility_changed" from="." to="." method="_on_CheatConsole_visibility_changed"]
[connection signal="text_changed" from="Background/Margin/VBox/Input/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="Background/Margin/VBox/Input/LineEdit" to="." method="_on_LineEdit_text_entered"]
